--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "Youtube_id":"Youtbe_id_here",
-    "Guality": "resolution_of_video_here",
+    "quality": "resolution_of_video_here",
     "video_name": "Name_here"
 }
